kube_files/redis-deploymet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
        - name: redis
          image: gcr.io/mohamed-abdelrazik-project/redis_image
          ports:
            - containerPort: 6379
